--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -59,6 +59,10 @@ body {
   max-width: 100vw;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .app-container {
   display: flex;
   flex-direction: row;
@@ -74,7 +78,6 @@ main {
   overflow: auto;
   height: calc(100vh - 80px);
   width: calc(100vw - 45px);
-  box-sizing: border-box;
 }
 
 input:focus,
@@ -162,7 +165,6 @@ header {
   padding: 0.2rem 0.5rem 0.2rem 0.5rem;
   font-size: 12px;
   background-color: var(--sub-header-background-hover);
-  box-sizing: border-box;
   border: none;
   color: var(--header-text-color-primary);
 }
@@ -233,7 +235,6 @@ header {
   padding: 0;
   margin: 0;
   width: 100%;
-  box-sizing: border-box;
 }
 
 #sidebar a,
@@ -262,7 +263,6 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  box-sizing: border-box;
   z-index: 1;
 }
 
@@ -273,14 +273,12 @@ header {
 
 #sidebar nav ul li .nav-button {
   border-left: solid 2px var(--sidebar-bg-color);
-  box-sizing: border-box;
 }
 
 #sidebar nav ul li:hover .nav-button {
   cursor: pointer;
   border-left: solid 2px var(--header-text-color-primary);
   transition: all 0.2s ease 0s;
-  box-sizing: border-box;
 }
 
 .nav-icon {
@@ -297,7 +295,6 @@ header {
 .selected {
   border-left: solid 2px white !important;
   /* background: var(--sidebar-bg-color-hover); */
-  box-sizing: border-box;
 }
 
 /** Sub-heading Styles **/
@@ -309,7 +306,6 @@ header {
   align-items: center;
   justify-content: space-between;
   z-index: -5;
-  box-sizing: border-box;
   padding: 0 0 0 1rem;
 }
 
@@ -562,7 +558,6 @@ footer {
   background-color: var(--color-red);
   color: white;
   border: solid 1px #666666;
-  box-sizing: border-box;
   height: 25px;
   border-radius: 5px;
 }
@@ -627,8 +622,6 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-
-  box-sizing: border-box;
 }
 
 .color-option:hover {
