feat: dynamically change subheader color in the editor depending on note color

--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -348,7 +348,7 @@ header {
 
 .sub-header-buttons ul li:hover {
   cursor: pointer;
-  background: var(--sub-header-background-hover);
+  /* background: var(--sub-header-background-hover); */
   transition: background-color 0.2s ease 0s;
 }
 
