--- a/client/src/css/marknotes.css
+++ b/client/src/css/marknotes.css
@@ -186,13 +186,25 @@
 .preview-body {
   width: 100%;
   height: 100%;
-  padding: 1rem;
   border: none;
   resize: none;
 }
 
+.preview-body {
+  padding: 1rem;
+}
+
 .editor-body:focus {
   outline: none;
+}
+
+.editor-body .CodeMirror {
+  height: 100%;
+  font-size: 14px;
+}
+
+.editor-body .CodeMirror.CodeMirror-wrap pre {
+  word-break: break-word;
 }
 
 /** Preview Styles **/
