--- a/client/src/css/quicknotes.css
+++ b/client/src/css/quicknotes.css
@@ -97,6 +97,18 @@
   color: var(--note-header-text-color);
 }
 
+.quicknote-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  white-space: pre-wrap; /* keep spacing added to text */
+  color: var(--note-text-color-primary);
+  font-weight: 500;
+
+  border: 1px solid #828282;
+  height: calc(170px);
+}
+
 .quicknote textarea {
   border: none;
   resize: none;
@@ -107,26 +119,16 @@
   color: var(--note-text-color-primary);
   font-weight: 500;
   width: 100%;
-}
-
-.quicknote-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  white-space: pre-wrap; /* keep spacing added to text */
   padding: 0.5rem 0.5rem 0 0.5rem;
-  color: var(--note-text-color-primary);
-  font-weight: 500;
-
-  border: 1px solid #828282;
-  height: calc(170px);
 }
 
 .quicknote-footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0 0.5rem 0 0.5rem;
   margin-bottom: 3px;
+  border-top: 1px solid #828282;
 }
 
 .quicknote-footer-left {
