--- a/client/src/css/marknotes.css
+++ b/client/src/css/marknotes.css
@@ -181,6 +181,16 @@
   outline: none;
 }
 
+/* Editor Scrollbars */
+.editor-content *::-webkit-scrollbar {
+  width: 8px;
+  height: 100%;
+}
+
+.editor-content *::-webkit-scrollbar-thumb {
+  background: var(--color-grey-dark) !important;
+}
+
 .editor-divider {
   width: 20px;
   background: #c4c4c4;
@@ -208,6 +218,7 @@
   height: 100%;
   font-size: 14px;
   padding-bottom: 10px;
+  padding-right: 1em;
 }
 
 .editor-body .CodeMirror.CodeMirror-wrap pre {
@@ -226,12 +237,18 @@
   padding: 0.5in;
 }
 
-.preview-body h1, h2 {
+.preview-body h1,
+h2 {
   padding-bottom: 0.2em;
   border-bottom: 1px solid var(--color-grey);
 }
 
-.preview-body h1, h2, h3, h4, h5, h6 {
+.preview-body h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0.5em 0;
 }
 
