--- a/client/src/css/quicknotes.css
+++ b/client/src/css/quicknotes.css
@@ -46,22 +46,20 @@
 .quicknotes-list {
   display: grid;
   /* grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); */
-  grid-template-columns: repeat(auto-fit, 250px);
-  grid-auto-rows: 220px;
+  grid-template-columns: repeat(auto-fit, 230px);
+  grid-auto-rows: auto;
   max-width: 100vw;
-
+  row-gap: 1rem;
+  column-gap: 1rem;
   z-index: 1;
 }
 
 /* General Quick Note Styles */
 .quicknote {
   background-color: var(--note-background-primary);
-  margin: 0 10px 10px 10px;
   width: 230px;
   height: fit-content;
-
   justify-self: center;
-
   font-size: 13px;
   font-family: "Source Sans Pro", sans-serif !important;
 }
