--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -527,24 +527,91 @@ footer {
   margin: 0.5rem 0 0.5rem;
 }
 
-/** Delete Menu **/
-.delete-note-button {
-  border: none;
-  background-color: rgb(0, 0, 0, 0);
-  color: var(--note-text-color-primary);
-  height: fit-content;
-  width: fit-content;
-  padding: 0;
-  margin-right: 0.4rem;
-  font-size: 12px;
-  position: relative;
-  top: 2px;
+/** Generic Note Styles **/
+.note-header {
+  width: 100%;
+  height: 25px;
+  color: var(--note-header-text-color);
+  background: var(--color-grey);
+  font-weight: 600;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 0 0.5em;
+
+  border-top: 1px solid #828282;
+  border-left: 1px solid #828282;
+  border-right: 1px solid #828282;
 }
 
-.delete-note-button:hover {
+.note-name {
+  width: 100%;
+  font-weight: 700;
+  padding: 0;
+}
+
+.note-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  white-space: pre-wrap; /* keep spacing added to text */
+  color: var(--note-text-color-primary);
+  font-weight: 500;
+  border: 1px solid #828282;
+  width: 100%;
+  height: 100%;
+}
+
+.note-body {
+  padding: 0.5rem;
+  color: var(--note-text-color-primary);
+}
+
+.note-footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 3px 0.5rem 3px 0.5rem;
+  border-top: 1px solid #828282;
+}
+
+.note-footer-left {
+  display: flex;
+  align-items: center;
+}
+
+.note-footer-right {
+  display: flex;
+  align-items: center;
+}
+
+/** Note Buttons **/
+.note-button {
+  background: none;
+  border: none;
+  color: var(--note-header-text-color);
+  height: 100%;
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 15px;
+  position: relative;
+  z-index: 5;
+  padding: 0;
+}
+
+.note-button:hover {
   cursor: pointer;
   color: white;
   transition: color 0.2s ease 0s;
+}
+
+/** Delete Menu **/
+.delete-note-button {
+  font-size: 11px;
 }
 
 .delete-menu-text {
@@ -588,14 +655,9 @@ footer {
   padding: 1rem 1rem 1.5rem 1rem;
 }
 
+.favorite-note-button,
 .color-menu-button {
-  background: none;
-  border: none;
-  color: var(--note-header-text-color);
-  height: 100%;
-  display: flex;
-  align-items: center;
-  font-size: 15px;
+  margin-right: 0.4em;
 }
 
 .color-menu-button:hover {
