--- a/client/src/css/marknotes.css
+++ b/client/src/css/marknotes.css
@@ -15,7 +15,7 @@
 
   --note-text-color-edit: #828282;
 
-  --note-border-color-hover: #5560ee;
+  --note-border-color-hover: #26a7fd;
 
   --preview-code-block-background: rgb(241, 241, 241);
 
