feat: toggle marknote editor and preview buttons

--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -102,6 +102,12 @@ textarea:focus {
   margin: 0.5rem;
 }
 
+.empty p svg {
+  position: relative;
+  top: 3px;
+  margin: 0 0.2em;
+}
+
 .italic {
   font-style: italic;
 }
