--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -657,9 +657,10 @@ footer {
   background-color: var(--color-red);
   color: white;
   border: solid 1px #666666;
-  height: 25px;
+  height: 28px;
   border-radius: 5px;
   text-decoration: none;
+  font-size: 14px;
 }
 
 .delete-menu-button:visited {
