--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -112,116 +112,6 @@ textarea:focus {
   font-style: italic;
 }
 
-/** Header and Title Bar Styles **/
-header {
-  background-color: var(--header-bg-color);
-  color: var(--header-text-color-primary);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 16px;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.4);
-
-  position: relative;
-
-  height: 30px;
-  z-index: 1000;
-}
-
-#header-drag {
-  flex: 1;
-  height: 100%;
-  display: absolute;
-  top: 0;
-  left: 0;
-  -webkit-app-region: drag;
-}
-
-#header-left {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 100%;
-}
-
-#app-title {
-  font-family: "Oleo Script", sans-serif;
-  padding: 0 0.75rem 0 0.75rem;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  font-size: 18px;
-  -webkit-app-region: drag;
-  -webkit-user-select: none;
-}
-
-.searchbar {
-  display: flex;
-  align-items: center;
-  margin-right: 1rem;
-}
-
-.search-icon {
-  font-size: 10px;
-}
-
-.searchbar input {
-  width: 200px;
-  margin-left: 0.3rem;
-  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
-  font-size: 12px;
-  background-color: var(--sub-header-background-hover);
-  border: none;
-  color: var(--header-text-color-primary);
-}
-
-.searchbar input::placeholder {
-  color: var(--header-text-color-primary);
-}
-
-.searchbar input:focus {
-  outline: none;
-}
-
-#title-bar-buttons ul {
-  list-style: none;
-  margin: 0;
-  height: 30px;
-  color: var(--header-text-color-primary);
-  padding: 0;
-}
-
-#title-bar-buttons ul li {
-  float: left;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 50px;
-  height: 100%;
-}
-
-#title-bar-buttons ul li:hover {
-  background-color: var(--header-bg-color-hover);
-  cursor: pointer;
-  transition: background-color 0.2s ease 0s;
-}
-
-#title-bar-buttons ul #close-app-button:hover {
-  background-color: var(--color-red-dark);
-}
-
-#minimize-icon {
-  position: relative;
-  bottom: 4px;
-  font-size: 15px;
-}
-
-#power-icon {
-  font-size: 22px;
-}
-
 /** Sidebar Styles **/
 #sidebar {
   background: var(--sidebar-bg-color);
@@ -401,7 +291,7 @@ footer {
   z-index: 1000;
 }
 
-#github-link {
+/* #github-link {
   margin-left: 0.5rem;
   padding: 0 0.4rem 0 0.4rem;
   height: 100%;
@@ -428,7 +318,7 @@ footer {
 
 #cpy {
   margin-right: 1rem;
-}
+} */
 
 /* Scrollbar Styles */
 ::-webkit-scrollbar {
