--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -12,8 +12,8 @@
   --header-bg-color-hover: #3e3d44;
   --header-text-color-primary: white;
 
-  --sidebar-bg-color: rgb(52, 51, 59);
-  --sidebar-bg-color-hover: rgb(73, 72, 78);
+  --sidebar-bg-color: #34333b;
+  --sidebar-bg-color-hover: #49484e;
 
   --sub-header-background-primary: #4b4a53;
   --sub-header-background-hover: #636269;
