--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -1,5 +1,8 @@
 /*** Main Application Stylesheet ***/
 
+/* Import Inter Font */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 /* Import Oleo Script Font */
 @import url("https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap");
 
@@ -56,6 +59,7 @@
 body {
   height: 100vh;
   max-width: 100vw;
+  font-family: Inter, sans-serif;
 }
 
 * {
@@ -69,14 +73,15 @@ body {
 
 main {
   flex: 1;
-  height: calc(100vh - 50px);
+  height: calc(100vh - 75px);
+  width: calc(100vw - 100px);
 }
 
 .main-content-wrapper {
   padding: 1.5rem 1.75rem;
   overflow: auto;
-  height: calc(100vh - 80px);
-  width: calc(100vw - 45px);
+  height: calc(100vh - 110px);
+  width: calc(100vw - 100px);
 }
 
 input:focus,
@@ -132,4 +137,9 @@ textarea:focus {
 ::-webkit-scrollbar-thumb:hover {
   background: var(--scrollbar-color-hover);
   cursor: pointer;
+}
+
+.menu-button {
+  height: 20px;
+  width: 20px;
 }
