--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -146,8 +146,8 @@ textarea:focus {
 }
 
 .menu-button {
-  height: 20px;
-  width: 20px;
+  height: 18px !important;
+  width: 18px !important;
 }
 
 .search-icon {
