--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -74,20 +74,21 @@ body {
 .app-container {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 100vw;
+  max-width: 100vw;
+  min-width: 100vw;
 }
 
 main {
-  flex: 1;
   height: calc(100vh - 75px);
-  width: 100%;
+  flex: 1 1 auto;
 }
 
 .main-content-wrapper {
-  padding: 1.5rem 1.75rem;
-  overflow: auto;
   height: calc(100vh - 110px);
   width: 100%;
+  overflow-y: auto;
+  padding: 1.5em 1.75em;
 }
 
 input:focus,
