--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -62,9 +62,11 @@ html {
 
 body {
   height: 100vh;
+  max-height: 100vh;
   max-width: 100vw;
   font-family: Inter, sans-serif;
   background: #212121;
+  overflow-y: hidden;
 }
 
 * {
