chore: bump dependencies, update images, branding

--- a/client/src/css/app.css
+++ b/client/src/css/app.css
@@ -9,9 +9,6 @@
 /* Import Raleway Font */
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-/* Import Shrikhand Font */
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-
 /* Variable Definitions */
 :root {
   --header-bg-color: #25242c;
@@ -216,4 +213,9 @@ textarea:focus {
   to {
     opacity: 0;
   }
+}
+
+.smile {
+  width: 24px;
+  height: 24px;
 }
